--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "7.1.9",
     "mongoose": "4.7.4",
     "morgan": "1.9.1",
+    "node-cache": "^5.0.0",
     "ramda": "^0.26.1",
     "request": "2.87.0",
     "winston": "2.4.1"
